# analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
k8s/: deployment.yaml  grafanadashboard.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/analyzer/: config.py  kafka.py  katalog.py  main.py  packager.py  worker.py
src/analyzer/pipelines/: __init__.py  blackframe.py  chapters.py  chromaprint.py  fuser.py  keyframe.py  silence.py  subtitles.py  tidb.py
tests/: test_fuser.py  test_keyframe.py  test_subtitles.py  test_tidb.py  test_tidb_sanity.py
