[project]
name = "analyzer"
version = "0.1.0"
description = "intro-skipper-style media segment detector for katalog (chapters, silence, blackframe, whisper, chromaprint)."
requires-python = ">=3.11"
dependencies = [
  # HTTP client to katalog API (claim, upload segments, fail). Sync because
  # the worker loop is one-item-at-a-time per worker and there's no fan-out.
  "httpx==0.28.1",
  # Structured JSON logs that play nicely with the cluster log pipeline.
  "structlog==25.4.0",
  # Tiny FastAPI surface for /healthz + /readyz. uvicorn runs it side-car to
  # the worker loop in the same process.
  "fastapi==0.118.0",
  "uvicorn[standard]==0.32.0",
  # faster-whisper bundles CTranslate2 (CUDA-capable). The Dockerfile installs
  # the matching CUDA libs.
  "faster-whisper==1.1.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.7.0",
  "pytest==8.3.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
